# Asd-classification

./: .gitignore  README.md  pyproject.toml  requirements.txt
interpretation/: lime_interpreter.py  shap_interpreter.py
model/: evaluate_model.py  train_baseline.py
model/bert/: bert_classfier.py  bert_embedder.py  bert_evaluator.py  bert_finetune.py  bert_fusiondataset.py  bert_textdataset.py  bert_trainer.py  bert_trainerfinetune.py
nlp_pipeline/: back_translator.py  embedding_oversample.py  feature_extraction.py  preprocess_text.py
notebook/: notebook.ipynb  notebook_dl.ipynb  notebook_finetune.ipynb  notebook_ml.ipynb
reports/: lime_results.csv  lime_results_LOGRES.csv  lime_results_SVM.csv  lime_results_SVM10FOLD.csv  shap_results_Logres_10_fold.csv  shap_results_SVM.csv  shap_results_SVM_10_fold.csv
