[tool.poetry]
name = "asd-classficiation"
version = "0.1.0"
description = "NLP-based ASD vs NON-ASD classification using TF-IDF and BERT"
authors = ["acoramadan <ahmadmufliramadhan.iclabs@umi.ac.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
